--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    margin: 2rem 5rem 5rem 0;
+:root {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    max-width: 100vw;
     padding: 0;
     box-sizing: border-box;
 }
